--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   var myCharacteristic;
 
   var deviceName;
+  
+  
+    var serviceUuid = "6e400001-b5a3-f393-e0a9-e50e24dcca9e";
+
+    var characteristicUuid = "6e400001-b5a3-f393-e0a9-e50e24dcca9e";
 
   function connect() {
-    let serviceUuid = "6e400001-b5a3-f393-e0a9-e50e24dcca9e";
 
-    let characteristicUuid = "6e400001-b5a3-f393-e0a9-e50e24dcca9e";
-
-    navigator.bluetooth.requestDevice({filters: [{services: [serviceUuid]}]})
+    navigator.bluetooth.requestDevice ({filters: [{services: [serviceUuid]}]})
     .then(device => {
       log('Connecting...');
       deviceName = device.name;
