--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
 <head>
   <title>Web-Bluetooth Terminal</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
